header section complete

--- a/style.css
+++ b/style.css
@@ -123,3 +123,29 @@ ul{
     justify-content: end;
     gap: 40px;
 }
+
+/* header */
+header{
+    padding: 50px var(--padding-inline-section);
+}
+
+.header-section{
+    justify-content: center;
+    gap: 50px;
+}
+.header-left{
+    max-width: 40vw;
+
+}
+.header-left h1{
+    margin-top: 20px;
+}
+
+.get-started-button{
+    margin: 20px;
+}
+
+.header-right img{
+    width: 600px;
+}
+
