--- a/style.css
+++ b/style.css
@@ -148,4 +148,45 @@ header{
 .header-right img{
     width: 600px;
 }
+/* companies section  */
+.companies-header{
+    text-align: center;
+    margin-block: 30px;
+    color: var(--primary-text-color);
+}
+.logos{
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.logo{
 
+    height: 46px;
+}
+
+/* features section  */
+
+.features-section{
+    padding: 80px var(--padding-inline-section) 0;
+    background-image: url(assets/asset\ 32.png);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.features-header{
+    text-align: center;
+    margin-bottom: 20px;
+}
+.features-header h2{
+    margin-bottom: 20px;
+}
+.features-area{
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 40px;
+}
+.features-card{
+    flex-direction: column;
+    gap: 20px;
+    max-width: 30%;
+    text-align: center;
+}
